--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <title>Plane crash story</title>
+    <title>Taking Flight, Flying High</title>
     <link rel="canonical" href="canonical.html" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PlayfairDisplay">
