--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
-     <title>XT Summit 2017 Demo</title>
-    <link rel="canonical" href="canonical.html" />
+     <title>Taking Flight, Flying High</title>
+   
+    <meta name="google-site-verification" content="google048e008533149cdc.html" />
+    <meta name="description" content="Taking flight, flying high" />
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="googlebot" content="" />
+     <link rel="canonical" href="canonical.html" />
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PlayfairDisplay">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
