--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="googlebot" content="" />
      <link rel="canonical" href="canonical.html" />
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PlayfairDisplay">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
     <style amp-custom>
@@ -31,7 +31,7 @@
             font-size: 22px;
             line-height: 32px;
             color: #333333;
-            font-family: Playfair Display, Serif;
+            font-family: Roboto Display, Serif;
         }
         
         nav {
